feat: user resource
