# src/routes/user/user.entity.ts
@@ -1,0 +1,13 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { UserRole } from '@prisma/client';
+
+export class UserEntity {
+  @ApiProperty() id!: string;
+  @ApiProperty() firstName!: string;
+  @ApiProperty() lastName!: string;
+  @ApiProperty() email!: string;
+  @ApiProperty({ enum: UserRole }) role!: UserRole;
+  @ApiProperty() createdAt!: Date;
+  @ApiProperty() updatedAt!: Date;
+  @ApiProperty({ nullable: true, required: false }) deletedAt!: Date | null;
+}
